<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="su"
            type="com.cyan.fireminigame.viewmodel.activity.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark"
        tools:context=".SignUpActivity">

        <TextView
            android:id="@+id/txt_su"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:text="@string/signUp"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edt_su_email"
            android:layout_width="360dp"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:afterTextChanged="@{(c)->su.emailVerify(c)}"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="36"
            android:singleLine="true"
            android:text="@={su.email}"
            app:layout_constraintStart_toStartOf="@+id/txt_su"
            app:layout_constraintTop_toBottomOf="@+id/txt_su_emVer" />

        <EditText
            android:id="@+id/edt_su_pwd"
            android:layout_width="360dp"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:afterTextChanged="@{(c)->su.pwd6(c)}"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/pwd"
            android:inputType="textPassword"
            android:maxLength="24"
            android:singleLine="true"
            android:text="@={su.pwd}"
            app:layout_constraintStart_toStartOf="@+id/txt_su"
            app:layout_constraintTop_toBottomOf="@+id/txt_su_pwd6" />

        <EditText
            android:id="@+id/edt_su_pwdCheck"
            android:layout_width="360dp"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:afterTextChanged="@{(c)->su.pwdMatch(c)}"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/pwdCheck"
            android:inputType="textPassword"
            android:maxLength="24"
            android:singleLine="true"
            android:text="@={su.pwdCheck}"
            app:layout_constraintStart_toStartOf="@+id/txt_su"
            app:layout_constraintTop_toBottomOf="@+id/txt_su_pwdMatch" />

        <EditText
            android:id="@+id/edt_su_nick"
            android:layout_width="360dp"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:afterTextChanged="@{(c)->su.nicCheck(c)}"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/nic"
            android:inputType="text"
            android:maxLength="16"
            android:singleLine="true"
            android:text="@={su.nick}"
            app:layout_constraintStart_toStartOf="@+id/txt_su"
            app:layout_constraintTop_toBottomOf="@+id/txt_su_nicCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_su"
            android:layout_width="360dp"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@color/dark"
            android:onClick="@{()->su.btnSuOnclick()}"
            android:text="@string/signUp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/txt_su"
            app:layout_constraintTop_toBottomOf="@+id/txt_su_emAlready" />

        <TextView
            android:id="@+id/txt_su_pwd6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/pwd6"
            android:textColor="@color/red"
            android:textSize="11sp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/txt_su"
            app:layout_constraintTop_toBottomOf="@+id/edt_su_email" />

        <TextView
            android:id="@+id/txt_su_pwdMatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/pwdMatch"
            android:textColor="@color/red"
            android:textSize="11sp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/txt_su"
            app:layout_constraintTop_toBottomOf="@+id/edt_su_pwd" />

        <TextView
            android:id="@+id/txt_su_nicCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/red"
            android:textSize="11sp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/txt_su"
            app:layout_constraintTop_toBottomOf="@+id/edt_su_pwdCheck" />

        <TextView
            android:id="@+id/txt_su_emAlready"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/emAlready"
            android:textColor="@color/red"
            android:textSize="11sp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/txt_su"
            app:layout_constraintTop_toBottomOf="@+id/edt_su_nick" />

        <TextView
            android:id="@+id/txt_su_emVer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:text="@string/emVer"
            android:textColor="@color/red"
            android:textSize="11sp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_su" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>